--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
+        //数据库框架GreenDao
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
         //compile 'com.android.support:design:25.3.1';
         //implementation 'com.android.support:design:28.0.0-alpha1';
         // NOTE: Do not place your application dependencies here; they belong
