--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".storage.greendao.GreenDaoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
+        <activity
+            android:name=".webview.WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".webview.GoWebViewActivity"
+            android:exported="false" />
         <activity
             android:name=".storage.greendao.GoodsDetailsActivity"
             android:exported="false" />
@@ -88,7 +93,7 @@
                 android:value=".layout.recyclerview.RecyclerViewActivity" />
         </activity>
         <activity
-            android:name=".layout.WebViewActivity"
+            android:name=".webview.BaseWebViewActivity"
             android:parentActivityName=".layout.LayoutActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
